// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render offset pagination component 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4+.bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11+.bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c4+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c11+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r0:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":r0:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          1 - 3 of 10
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":r0:-label"
            class="c10"
            id=":r0:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":r4:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":r4:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":r5:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":r5:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with invalid page info 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4+.bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11+.bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c4+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c11+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r6:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":r6:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          -8 - -6 of 10
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":r6:-label"
            class="c10"
            id=":r6:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":ra:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":ra:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":rb:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":rb:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with invalid range info 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4+.bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11+.bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c4+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c11+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":rc:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":rc:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          1 - -5 of 10
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":rc:-label"
            class="c10"
            id=":rc:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":rg:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":rg:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":rh:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":rh:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with no items 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c2 {
  align-self: auto;
  flex-basis: auto;
  flex-grow: 0;
  order: 0;
  flex-shrink: 1;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4+.bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11+.bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c4+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c11+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":ri:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":ri:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          0 of 0
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":ri:-label"
            class="c10"
            id=":ri:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":rm:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":rm:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":rn:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":rn:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
